wcfsetup/install/files/style/layout.less
/* ... */
.layoutFixed {
	margin: 0 auto;
	width: @wcfLayoutFixedWidth;
}

/* ### header ### */
#pageHeader {
	margin-top: 57px;
	z-index: 100;
}

#top {
	display: block;
	height: 1px;
	visibility: hidden;
}

/* user panel */
.userPanel {
	background-color: @wcfUserPanelBackgroundColor;
	height: 40px;
	left: 0;
	position: fixed;
	top: 0;
	right: 0;
	z-index: 200;

	> div {
		> ul.userPanelItems {
			float: left;
			
			.clearfix();
			
			> li {
				float: left;
				
				> a,
				> div:not(.dropdownMenu) {
					color: @wcfUserPanelColor;
					display: block;
					height: 20px;
					padding: 10px 8px;
					position: relative;
					
					.textShadow(@wcfUserPanelBackgroundColor);
					.transition(background-color, .2s);
					
					&:hover {
						background-color: @wcfUserPanelHoverBackgroundColor;
						color: @wcfUserPanelHoverColor;
						text-decoration: none;
					}
					
					> .badge.badgeInverse {
						background-color: rgb(204, 0, 0); /* todo */ 
						color: white;
						padding: 0 6px 1px;
						position: absolute;
						bottom: 4px;
						left: 24px;
						z-index: 300;
					}
				}
				
				> .framed > img {
					padding: 0px;
					margin-top: -2px;
					margin-bottom: -2px;
				}
			}
		}
	
		> .searchBar {
			float: right;
			padding: 6px 0 7px;
			background-color: @wcfUserPanelHoverBackgroundColor;
			
			> form input[type="search"] {
				background-color: transparent;
				background-image: url("../icon/searchInverse.svg");
				background-repeat: no-repeat;
				background-position: 7px 5px;
				border-width: 0;
				color: @wcfUserPanelColor;
				padding: 6px 12px 5px 26px;
				width: 180px;
				-webkit-appearance: textfield;
				
				.textShadow(@wcfUserPanelHoverBackgroundColor);
				
				&:focus {
					outline: 0;
				}
			}
		}
	}
}

/* header logo */
.logo {
	a {
		display: block;
		min-height: 100px;
		
		&:hover {
			text-decoration: none;
		}
		
		h1 {
			color: @wcfPageLinkHoverColor;
			float: right;
			font-size: 160%;
			padding-top: @wcfGapLarge;
			
			.textShadow(@wcfPageBackgroundColor);
		}
	}
}

/* main menu */
.mainMenu {
	> ul {
		border-bottom: 1px solid @wcfContainerBorderColor;
		
		&:after {
			clear: both;
			content: '';
			display: block;
		}
		
		> li {
			background-color: @wcfMainMenuBackgroundColor;
			float: left;
			font-size: @wcfSubHeadlineFontSize;
			margin-bottom: -1px;
			
			> a {
				color: @wcfMainMenuColor;
				display: inline-block;
				padding: 11px 35px;
				font-weight: bold;
				
				&:hover {
					border-bottom: 1px solid @wcfContainerBorderColor;
					background-color: @wcfMainMenuHoverBackgroundColor;
					text-decoration: none;
				}
				
				> .badge {
					font-size: 60%;
					top: -2px;
				}
			}
			
			&.active {
				> a {
					border-bottom: 1px solid @wcfNavigationHeaderBackgroundColor;
					background-color: @wcfNavigationHeaderBackgroundColor;
					color: @wcfMainMenuActiveColor;
				}
			}
			
			&:not(:last-child) {
				border-right: 1px solid @wcfContainerBorderColor;
			}
		}
	}
}

/* navigation */
.navigation {
	padding: 0 7px;
	
	> ul {
		display: inline-block;
		
		&.navigationIcons {
			float: right;
			
			> li {
				float: right;
				padding: 0 3px;
				
				&.separator {
					border-right: 1px dotted @wcfContainerBorderColor;
				}
				
				> *:not(script) {
					padding: 3px;
					display: inline-block;
				}
			}
		}
		
		&:not(.navigationIcons) {
			> li {
				display: inline-block;
				margin-top: 5px;
				
				> a {
					padding: 2px 4px;
					
					&:hover {
						text-decoration: none;
					}
				}
			}
		}
	}
}

.navigationHeader {
	background-color: @wcfNavigationHeaderBackgroundColor;
	border-bottom: 1px solid @wcfContainerBorderColor;
}
	
.navigationFooter {
	background-color: @wcfNavigationFooterBackgroundColor;
	border-top: 1px solid @wcfContainerBorderColor;
}

/* ### footer ### */
.footer {
	padding-bottom: @wcfGapMedium;
	z-index: 100;
	
	.footerContent {
		text-align: center;
		
		a {
			color: @wcfPageLinkColor;
			
			.textShadow(@wcfPageBackgroundColor);
			.transition(color, .1s);
			
			&:hover {
				color: @wcfPageLinkHoverColor;
				text-decoration: none;
			}
		}
	}
}

/* ### content ### */
#main {
	z-index: 110;
	
	> div {
		background-color: @wcfSidebarBackgroundColor;
		
		> .sidebar {
			width: 300px;
			z-index: 120;
		}
		
		> .content {
			background-color: @wcfContentBackgroundColor;
			min-height: 100px;
			padding: @wcfGapSmall @wcfGapLarge * 2 - @wcfGapTiny @wcfGapLarge;
			z-index: 130;
		}
	}
	
	&:not(.sidebarOrientationLeft):not(.sidebarOrientationRight) {
		.sidebar {
			display: none;
		}
	}
	
	&.sidebarOrientationLeft {
		.content {
			margin-left: 300px;
		}
		
		.sidebar {
			float: left;
		}
	}
	
	&.sidebarOrientationRight {
		.content {
			margin-right: 300px;
		}
		
		.sidebar {
			float: right;
		}
	}
}

/* basic layout elements */
.boxHeadline {
	margin-top: @wcfGapMedium;
	
	hgroup {
		> h1 {
			color: @wcfHeadlineColor;
			font-family: @wcfHeadlineFontFamily;
			font-size: @wcfHeadlineFontSize;
			font-weight: bold;
			
			.textShadow(@wcfContentBackgroundColor);
			
			a {
				color: @wcfHeadlineColor;
				text-decoration: none;
			}
		}
		
		> h2, h3 {
			color: @wcfDimmedColor;
			font-size: @wcfSmallFontSize;
		}
	}
}

.contentNavigation {
	display: table;
	width: 100%;
	
	> * {
		margin-top: @wcfGapMedium;
	}
	
	nav ul {
		text-align: left;
	}
	
	nav > ul {
		float: left;
		
		&:not(.pageNavigation) {
			float: right;
			text-align: right;
		}
		
		li {
			display: inline;
		}
	}
}

.container {
	background-color: @wcfContainerBackgroundColor;
	border: 1px solid @wcfContainerBorderColor;
}

.containerPadding {
	padding: @wcfGapMedium @wcfGapLarge @wcfGapMedium;
}
/* ... */

